# funky

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  Cargo.toml  DEVIATIONS.md  README.md  funky.toml  tasks.py  todo-sqlite-cli.db
.github/workflows/: build.yml
doc/: funky.1
src/: config.rs  formatter.rs  lexer.rs  main.rs  token.rs
tests/: corpus_test.rs
