[package]
name = "funky-fmt"
version = "0.4.0"
edition = "2021"
description = "C/C++ code formatter with Unicode support and TOML configuration"
license = "MIT"
authors = ["Brandon Arrendondo <brandon@arrendondo.dev>"]
repository = "https://github.com/brandon-arrendondo/funky"
readme = "README.md"
keywords = ["formatter", "c", "cpp", "unicode", "clang-format"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "funky"
path = "src/main.rs"

[dependencies]
clap      = { version = "4", features = ["derive"] }
serde     = { version = "1", features = ["derive"] }
toml      = "0.8"
thiserror = "2"
anyhow    = "1"
walkdir   = "2"
globset   = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
